--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/dky1831/calculator/issues"
   },
-  "homepage": "https://github.com/dky1831/calculator#readme"
+  "homepage": "https://github.com/dky1831/calculator#readme",
+  "devDependencies": {
+    "electron": "^8.2.5"
+  }
 }
